[package]
name = "fates"
version = "0.1.9"
authors = ["James Higgins <james.isaac.higgins@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A crate for creating reactive declarations"
repository = "https://github.com/jihiggins/fates"
categories = ["asynchronous", "concurrency", "gui", "caching"]
readme = "../README.md"

[dependencies]
fates_macro = { version = "0.1.9", path = "../fates_macro" }
parking_lot = "0.11"
