[package]
name = "fates_macro"
version = "0.1.2"
authors = ["James Higgins <james.isaac.higgins@gmail.com>"]
edition = "2018"
license = "MIT"
description = "weh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version = "1.0.67", features = ["full", "fold", "visit-mut"] }
