[package]
name = "fates_macro"
version = "0.1.8"
authors = ["James Higgins <james.isaac.higgins@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Helper macro for Fates crate. See https://crates.io/crates/fates"
repository = "https://github.com/jihiggins/fates"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "fold", "visit-mut", "extra-traits"] }
